Working on the Patient List

--- a/frontend/src/styles/2024_FED_API_Skills_Test.css
+++ b/frontend/src/styles/2024_FED_API_Skills_Test.css
@@ -6,7 +6,7 @@
 --activestate_bg_2: #D8FCF7;
 --activestate_bg_1: #01F0D0;
 --unnamed-color-0bd984: #0BD984;
---unnamed-color-072635: #072635;
+--unnamed-color-072635: rgb(7, 38, 53);
 --unnamed-color-0c3d5d: #0C3D5D;
 --unnamed-color-084c77: #084C77;
 --unnamed-color-055a92: #055A92;
