--- a/frontend/src/styles/PatientTile.scss
+++ b/frontend/src/styles/PatientTile.scss
@@ -1,13 +1,14 @@
 @use "./colors" as cols;
+@use "./fonts" as fws;
+@use "./mixins" as *;
 
 div.tile-container {
-  width: 317px;
+  max-width: 317px;
+  min-width: 317px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  margin-left: 20px;
-  margin-right: 30px;
   margin-bottom: 32px;
 
   &>img.face {
@@ -24,18 +25,19 @@ div.tile-container {
     padding: 0;
     display: flex;
     flex-direction: column;
-    font-size: 14px;
     align-items: flex-start;
     justify-content: center;
+    @include font-preset(14);
 
     &>.top-line {
-      font-weight: bold;
+      font-weight: fws.$bold;
       color: cols.$col_05;
       cursor: pointer;
     }
 
     &>.bottom-line {
       color: cols.$col_20;
+      font-weight: fws.$regular;
     }
   }
 
@@ -44,4 +46,8 @@ div.tile-container {
     width: 18px;
     cursor: pointer;
   }
+}
+
+div.tile-container:last-child {
+  margin-bottom: 0;
 }
