--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1,25 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Manrope:wght@200..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 @use "./colors" as cols;
+@use "./fonts" as fws;  // font-weights
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
 * {
+  box-sizing: border-box;
   font-family: "Manrope", sans-serif;
-  font-weight: 800px;
+  font-weight: fws.$regular;
   font-style: normal;
-  font-optical-sizing: auto;
-  line-height: 33px;
   color: cols.$col_05;
-}
-
-::-webkit-scrollbar {
-  width: 6px;
-}
-
-::-webkit-scrollbar-track {
-  background: #e3e4e6;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: cols.$col_05;
-  border-radius: 3px;
 }
