Finished the BP Graph

--- a/frontend/src/styles/DiagCard.scss
+++ b/frontend/src/styles/DiagCard.scss
@@ -1,9 +1,9 @@
-div.patients-card {
-  width: 367px;
-  height: 1054px;
-  padding: 20px 0;
+div.diag-card {
   display: flex;
   flex-direction: column;
+  padding: 20px;
+  width: 766px;
+  height: 349px;
   border-radius: 16px;
 
   border: black solid 1px;
