--- a/frontend/src/styles/_mixins.scss
+++ b/frontend/src/styles/_mixins.scss
@@ -1,5 +1,8 @@
 @mixin font-preset($size) {
-  @if $size == 13 {
+  @if $size == 12 {
+    font-size: 12px;
+    line-height: 17px;
+  } @else if $size == 13 {
     font-size: 13px;
     line-height: 18px;
   } @else if $size == 14 {
@@ -11,6 +14,9 @@
   } @else if $size == 18 {
     font-size: 18px;
     line-height: 24px;
+  } @else if $size == 22 {
+    font-size: 22px;
+    line-height: 30px;
   } @else if $size == 24 {
     font-size: 24px;
     line-height: 33px;
