--- a/frontend/src/styles/DiagCard.scss
+++ b/frontend/src/styles/DiagCard.scss
@@ -1,3 +1,5 @@
+@use "./colors" as cols;
+
 div.diag-card {
   display: flex;
   flex-direction: column;
@@ -6,5 +8,6 @@ div.diag-card {
   height: 349px;
   border-radius: 16px;
 
-  border: black solid 1px;
+  // border: black solid 1px;
+  background-color: cols.$col_02;
 }
