--- a/frontend/src/styles/InfoCard.scss
+++ b/frontend/src/styles/InfoCard.scss
@@ -1,5 +1,11 @@
+@use "./colors" as cols;
+
 div.info-card {
   padding: 32px 20px;
   width: 367px;
   border-radius: 16px;
+
+  background-color: cols.$col_02;
+
+  // border: black 1px solid;
 }
