--- a/frontend/src/styles/LabCard.scss
+++ b/frontend/src/styles/LabCard.scss
@@ -1,10 +1,14 @@
+@use "./colors" as cols;
+
 div.lab-card {
   width: 367px;
   height: 296px;
   padding: 20px 20px 0 20px;
-  border: black solid 1px;
+  // border: black solid 1px;
   border-radius: 16px;
   
   display: flex;
   flex-direction: column;
+
+  background-color: cols.$col_02;
 }
