Added my personal info

--- a/frontend/src/styles/colors.scss
+++ b/frontend/src/styles/colors.scss
@@ -18,3 +18,4 @@ $col_17 : rgba(1, 240, 208, 1);    /* Patient Highlight    | #01F0D0 */
 $col_18 : rgba(216, 252, 247, 1);  /* Patients Tab         | #D8FCF7 */
 $col_19 : rgba(237, 237, 237, 1);  /* Dr Grid Line         | #EDEDED */
 $col_20 : rgba(112, 112, 112, 1);  /* Gender, Age          | #707070 */
+$col_21 : rgb(236, 236, 236);      /* Page Border          | #ececec */
