--- a/frontend/src/styles/PatientsPage.scss
+++ b/frontend/src/styles/PatientsPage.scss
@@ -1,12 +1,17 @@
 @use "./colors" as cols;
 
-div.patients-page {
-  background-color: cols.$col_01;
-  padding: 18px;
+div.page-wrapper {
+  position: relative;
 
-  &>div.row-2 {
-    display: flex;
-    flex-direction: row;
-    gap: 32px;
+  &>div.patients-page {
+    background-color: cols.$col_01;
+    padding: 18px;
+    border: solid 1px cols.$col_21;
+
+    &>div.row-2 {
+      display: flex;
+      flex-direction: row;
+      gap: 32px;
+    }
   }
 }
