--- a/frontend/src/styles/ShowButton.scss
+++ b/frontend/src/styles/ShowButton.scss
@@ -2,13 +2,17 @@
 @use "./fonts" as fws;
 @use "./mixins" as *;
 
-button.show {
-  margin: 0 auto;
+div.show {
   width: 220px;
   border-radius: 41px;
   background-color: cols.$col_17;
   padding: 11px 0;
+
   @include font-preset(14);
   font-weight: fws.$bold;
-  border: none;
+  text-align: center;
+  cursor: pointer;
+
+  display: block;
+  margin: 0 auto;
 }
