Everything Set for production.

--- a/frontend/src/styles/Advertise.scss
+++ b/frontend/src/styles/Advertise.scss
@@ -13,8 +13,9 @@ div.advertise {
   justify-content: space-evenly;
   gap: 4px;
 
-  border: solid black 1px;
+  border: solid black 0.1px;
   padding: 8px;
+  border-radius: 8px;
 
   background: white;
 
